website/static/css/custom.css
/* your custom css */

@media only screen and (min-device-width: 360px) and (max-device-width: 736px) {
    .docsNavContainer .toc .navBreadcrumb {
        background-color: #000000;
    }
    
    .docsNavContainer {
        background-color: #000000;
    }
}

@media only screen and (min-width: 1024px) {
}

@media only screen and (max-width: 1023px) {
    .docsNavContainer .toc .navBreadcrumb {
        background-color: #000000;
    }
    
    .docsNavContainer {
        background-color: #000000;
    }
}

@media only screen and (min-width: 1400px) {
}

@media only screen and (min-width: 1500px) {
}

.toc .toggleNav ul li.navListItemActive a {
    color: #ffffff;
    text-decoration: underline;
}

.toc .toggleNav ul li a {
    color: #999999;
    padding-left: 20px
}

.toc .toggleNav ul li a:hover {
    color: #ffffff
}

.toc .toggleNav .navGroup .navGroupSubcategoryTitle {
    padding-left: 20px;
    color: #999999;
    cursor: pointer;
}

.toc .toggleNav .navGroup .navGroupSubcategoryTitle:hover {
    color: #ffffff;
}

.toc .toggleNav .subNavGroup .navListItem .navItem {
    padding-left: 40px;
}

.navigationSlider .slidingNav ul li a {
    color: #dddddd
}

.navigationSlider .slidingNav ul li a:hover, .navigationSlider .slidingNav ul li.siteNavItemActive a, .navigationSlider .slidingNav ul li.siteNavGroupActive a {
    color: #ffffff
}

.sideNavVisible {
    background-color: #141414;
}

.line1, .line2, .line3 {
    background-color: #ffffff;
}

.navBreadcrumb a, .navBreadcrumb span {
    color: #ffffff;
}

.toggleNav h2 i {
    font-size: 0px
}

.toc .toggleNav .navGroup .navGroupCategoryTitle {
    color: #999999;
    font-weight: normal;
}

.toc .toggleNav .navGroup .navGroupCategoryTitle:hover {
    color: #ffffff;
}

.toc .toggleNav .navGroup .navGroupSubcategoryTitle:hover .arrow.rotate path[d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z"] {
    fill: #ffffff
} 

.toc .toggleNav .navGroup .navGroupSubcategoryTitle:hover .arrow path[d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z"] {
    fill: #ffffff
} 

.toc .toggleNav .navGroup .navGroupCategoryTitle:hover .arrow.rotate path[d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z"] {
    fill: #ffffff
} 

.toc .toggleNav .navGroup .navGroupCategoryTitle:hover .arrow path[d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z"] {
    fill: #ffffff
} 

.collapsible .arrow path[d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z"] {
    fill: #999999
}

.toc .toggleNav .navGroup .navGroupSubcategoryTitle path[d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z"] {
    fill: #999999
}

.mainContainer {
    color: #ffffff
}

a.docs-next.button {
    border: 1px solid #ffffff;
    color: #ffffff;
}

a.docs-prev.button {
    border: 1px solid #ffffff;
    color: #ffffff;
}

.docsSliderActive .toc .navBreadcrumb {
    border-bottom: 1px solid #333333;
}

.fixedHeaderContainer header .headerTitleWithLogo {
    display: none
}

.mainContainer {
    color: #dddddd
}

.mainContainer h1 {
    color: #FFFFFF
}

.mainContainer h2 {
    color: #6ab1fd
}

.mainContainer h3 {
    color: #6ab1fd
}

.mainContainer h4 {
    color: #6ab1fd
}

.mainContainer a {
    color: #ffffff;
    text-decoration: underline;
    font-style: italic;
}

.docs-prevnext a {
    color: #ffffff;
    text-decoration: none;
    font-style: normal;
}

.highlighted-text {
    color: #ff9933;
}

